# SuperCalculator

./: CMakeLists.txt  Calculate.c  Calculate.h  Define_first.h  Gauss-Jordan Elimination.c  Gauss-Jordan Elimination.h  Greatest Common Divisor & Least Common Multiple.c  Greatest Common Divisor & Least Common Multiple.h  Main.c  Super_Calculator_Main.c  complex math.c  complex math.h  file-operate functions.c  file-operate functions.h  function_one-add_calculate.h  hashMap.c  hashMap.h  high-accuracy.c  high-accuracy.h  matrix.c  matrix.h  matrix_c.c  matrix_c.h  quick_pow.c  quick_pow.h  quick_sort.c  quick_sort.h  tri-math functions.c  tri-math functions.h
